{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 305,
  "lineage": "2064ba50-5af7-4709-456a-7e4ec82209ff",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "ml_services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397974418:vpc/vpc-06efd49c41898659d",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-02d911d1e9bef096d",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0c23fa02b5091b909",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06efd49c41898659d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07cde39f27c1df770",
            "owner_id": "767397974418",
            "tags": {
              "Name": "marketminute-dev-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ml_services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08fa3ed5577079e64",
            "arn": "arn:aws:ec2:us-east-1:767397974418:instance/i-013308c6fe96e5dd4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "marketminute-dev-ml-services",
            "id": "i-013308c6fe96e5dd4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08b679912d8e6cc53",
            "private_dns": "ip-10-0-1-107.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.107",
            "public_dns": "ec2-44-204-196-26.compute-1.amazonaws.com",
            "public_ip": "44.204.196.26",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a8d6f13c8da25d82",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0af189e4f214860c2",
            "tags": {
              "Name": "marketminute-dev-ml-services"
            },
            "tags_all": {
              "Name": "marketminute-dev-ml-services"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04c4020f2ea47210f"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ml_services",
            "aws_iam_role.ml_services_ec2",
            "aws_internet_gateway.ml_services",
            "aws_route_table.ml_services",
            "aws_route_table_association.ml_services",
            "aws_security_group.ml_services",
            "aws_subnet.ml_services",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_vpc.ml_services"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ml_services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397974418:internet-gateway/igw-01122bd49376f41ee",
            "id": "igw-01122bd49376f41ee",
            "owner_id": "767397974418",
            "tags": {
              "Name": "marketminute-dev-igw"
            },
            "tags_all": {
              "Name": "marketminute-dev-igw"
            },
            "vpc_id": "vpc-06efd49c41898659d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.ml_services"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ml_services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397974418:route-table/rtb-0fcfc573786ce0cbe",
            "id": "rtb-0fcfc573786ce0cbe",
            "owner_id": "767397974418",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01122bd49376f41ee",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "marketminute-dev-rt"
            },
            "tags_all": {
              "Name": "marketminute-dev-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06efd49c41898659d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ml_services",
            "data.aws_vpc.ml_services"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ml_services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06dfdf62baed509e4",
            "route_table_id": "rtb-0fcfc573786ce0cbe",
            "subnet_id": "subnet-0af189e4f214860c2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ml_services",
            "aws_route_table.ml_services",
            "aws_subnet.ml_services",
            "data.aws_vpc.ml_services"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ml_services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397974418:security-group/sg-04c4020f2ea47210f",
            "description": "Security group for sentiment and relevance FastAPI services",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04c4020f2ea47210f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Relevance API",
                "from_port": 8002,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8002
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Sentiment API",
                "from_port": 8001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8001
              }
            ],
            "name": "marketminute-dev-ml-services",
            "name_prefix": "",
            "owner_id": "767397974418",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "marketminute-dev-ml-services"
            },
            "tags_all": {
              "Name": "marketminute-dev-ml-services"
            },
            "timeouts": null,
            "vpc_id": "vpc-06efd49c41898659d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.ml_services"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ml_services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397974418:subnet/subnet-0af189e4f214860c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af189e4f214860c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397974418",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "marketminute-dev-subnet"
            },
            "tags_all": {
              "Name": "marketminute-dev-subnet"
            },
            "vpc_id": "vpc-06efd49c41898659d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.ml_services"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ml_services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397974418:vpc/vpc-06efd49c41898659d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0836dde997b1c7f78",
            "default_route_table_id": "rtb-07cde39f27c1df770",
            "default_security_group_id": "sg-020c332b7ded52d0a",
            "dhcp_options_id": "dopt-0c23fa02b5091b909",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06efd49c41898659d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07cde39f27c1df770",
            "owner_id": "767397974418",
            "tags": {
              "Name": "marketminute-dev-vpc"
            },
            "tags_all": {
              "Name": "marketminute-dev-vpc"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpcs.available"
          ]
        }
      ]
    }
  ]
}